// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function.js (dev): compiled 1`] = `
function getGreen() {
  return "green";
}

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: getGreen()
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

function getGreen() {
  return "green";
}

const styles = {
  bgGreen: "gkcss0-backgroundColor-green"
};
`;

exports[`function.js (dev): css 1`] = `.gkcss0-backgroundColor-green{background-color:green}`;

exports[`function.js (dev): dependencies 1`] = `Array []`;

exports[`function.js (prod): compiled 1`] = `
function getGreen() {
  return "green";
}

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: getGreen()
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

function getGreen() {
  return "green";
}

const styles = {
  bgGreen: "gkcss0-bf54id"
};
`;

exports[`function.js (prod): css 1`] = `.gkcss0-bf54id{background-color:green}`;

exports[`function.js (prod): dependencies 1`] = `Array []`;

exports[`import.js (dev): compiled 1`] = `
import * as Colors from "./imports/colors.es";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: Colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import * as Colors from "./imports/colors.es";
const styles = {
  bgGreen: "gkcss0-backgroundColor-green"
};
`;

exports[`import.js (dev): css 1`] = `.gkcss0-backgroundColor-green{background-color:green}`;

exports[`import.js (dev): dependencies 1`] = `
Array [
  /Users/dual/Code/geekie/css/tests/babel/fixtures/imports/colors.es.js,
]
`;

exports[`import.js (prod): compiled 1`] = `
import * as Colors from "./imports/colors.es";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: Colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import * as Colors from "./imports/colors.es";
const styles = {
  bgGreen: "gkcss0-bf54id"
};
`;

exports[`import.js (prod): css 1`] = `.gkcss0-bf54id{background-color:green}`;

exports[`import.js (prod): dependencies 1`] = `
Array [
  /Users/dual/Code/geekie/css/tests/babel/fixtures/imports/colors.es.js,
]
`;

exports[`import-multiple-specifiers.js (dev): compiled 1`] = `
import { GREEN, RED } from "./imports/colors.es";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: GREEN
  },
  bgRed: {
    backgroundColor: RED
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import { GREEN, RED } from "./imports/colors.es";
const styles = {
  bgGreen: "gkcss0-backgroundColor-green",
  bgRed: "gkcss0-backgroundColor-red"
};
`;

exports[`import-multiple-specifiers.js (dev): css 1`] = `
.gkcss0-backgroundColor-green{background-color:green}
.gkcss0-backgroundColor-red{background-color:red}
`;

exports[`import-multiple-specifiers.js (dev): dependencies 1`] = `
Array [
  /Users/dual/Code/geekie/css/tests/babel/fixtures/imports/colors.es.js,
]
`;

exports[`import-multiple-specifiers.js (prod): compiled 1`] = `
import { GREEN, RED } from "./imports/colors.es";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: GREEN
  },
  bgRed: {
    backgroundColor: RED
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import { GREEN, RED } from "./imports/colors.es";
const styles = {
  bgGreen: "gkcss0-bf54id",
  bgRed: "gkcss0-5scuol"
};
`;

exports[`import-multiple-specifiers.js (prod): css 1`] = `
.gkcss0-bf54id{background-color:green}
.gkcss0-5scuol{background-color:red}
`;

exports[`import-multiple-specifiers.js (prod): dependencies 1`] = `
Array [
  /Users/dual/Code/geekie/css/tests/babel/fixtures/imports/colors.es.js,
]
`;

exports[`require.js (dev): compiled 1`] = `
const colors = require("./imports/colors.cjs");

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const colors = require("./imports/colors.cjs");

const styles = {
  bgGreen: "gkcss0-backgroundColor-green"
};
`;

exports[`require.js (dev): css 1`] = `.gkcss0-backgroundColor-green{background-color:green}`;

exports[`require.js (dev): dependencies 1`] = `
Array [
  /Users/dual/Code/geekie/css/tests/babel/fixtures/imports/colors.cjs.js,
]
`;

exports[`require.js (prod): compiled 1`] = `
const colors = require("./imports/colors.cjs");

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const colors = require("./imports/colors.cjs");

const styles = {
  bgGreen: "gkcss0-bf54id"
};
`;

exports[`require.js (prod): css 1`] = `.gkcss0-bf54id{background-color:green}`;

exports[`require.js (prod): dependencies 1`] = `
Array [
  /Users/dual/Code/geekie/css/tests/babel/fixtures/imports/colors.cjs.js,
]
`;

exports[`simple-var.js (dev): compiled 1`] = `
const green = "green";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: green
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const green = "green";
const styles = {
  bgGreen: "gkcss0-backgroundColor-green"
};
`;

exports[`simple-var.js (dev): css 1`] = `.gkcss0-backgroundColor-green{background-color:green}`;

exports[`simple-var.js (dev): dependencies 1`] = `Array []`;

exports[`simple-var.js (prod): compiled 1`] = `
const green = "green";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: green
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const green = "green";
const styles = {
  bgGreen: "gkcss0-bf54id"
};
`;

exports[`simple-var.js (prod): css 1`] = `.gkcss0-bf54id{background-color:green}`;

exports[`simple-var.js (prod): dependencies 1`] = `Array []`;

exports[`static.js (dev): compiled 1`] = `
const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: "green"
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const styles = {
  bgGreen: "gkcss0-backgroundColor-green"
};
`;

exports[`static.js (dev): css 1`] = `.gkcss0-backgroundColor-green{background-color:green}`;

exports[`static.js (dev): dependencies 1`] = `Array []`;

exports[`static.js (prod): compiled 1`] = `
const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: "green"
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const styles = {
  bgGreen: "gkcss0-bf54id"
};
`;

exports[`static.js (prod): css 1`] = `.gkcss0-bf54id{background-color:green}`;

exports[`static.js (prod): dependencies 1`] = `Array []`;
